Adjust grid measurements

--- a/src/Styles/Education.css
+++ b/src/Styles/Education.css
@@ -1,7 +1,7 @@
 .education {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 10vw;
+  grid-template-rows: 50px 100px 100px;
   justify-content: center;
 }
 
