--- a/src/Styles/PersonalData.css
+++ b/src/Styles/PersonalData.css
@@ -6,6 +6,11 @@
   align-items: center;
 }
 
+#picture {
+  grid-column: 1;
+  grid-row: 1/4;
+}
+
 #picture > img {
   max-width: 400px;
   max-height: 400px;
