--- a/src/Styles/Education.css
+++ b/src/Styles/Education.css
@@ -1,35 +1,49 @@
 .education {
   display: grid;
-  grid-template-columns: 1fr 1fr 10vw;
-  grid-template-rows: 50px 100px 100px;
+  grid-template-columns: 10vw 1fr 1fr 10vw;
+  grid-template-rows: 50px 100px 100px 60px;
   justify-content: center;
 }
 
 #school-name {
-  grid-column: 1;
+  grid-column: 2;
   grid-row: 2;
 }
 
 #school-title {
-  grid-column: 2;
+  grid-column: 3;
   grid-row: 2;
 }
 
 #school-start {
-  grid-column: 1;
-  grid-row: 3;
-}
-
-#school-end {
   grid-column: 2;
   grid-row: 3;
 }
 
-#delete-button {
+#school-end {
   grid-column: 3;
+  grid-row: 3;
+}
+
+#delete-button-education {
+  grid-column: 4;
   grid-row: 1;
-  width: 30px;
-  height: 30px;
-  background-color: aqua;
-  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  background-color: crimson;
+  border: 2px solid rgb(97, 0, 0);
+  border-radius: 50px;
+  color: white;
+  font-size: 20px;
+  transition: all 0.15s ease;
+}
+
+#delete-button-education:hover {
+  background-color: white;
+  color: crimson;
+}
+
+#edit-submit-button-education {
+  grid-column: 3/5;
+  grid-row: 4;
 }
