--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,8 @@
 .App {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .app-form {
@@ -11,10 +13,42 @@
 }
 
 .app-form {
-  border: 5px solid rgb(190, 190, 190);
+  border: 5px solid rgb(99, 99, 99);
+  background-color: white;
+  border-radius: 30px;
 }
 
 #button-submit {
   width: 200px;
   align-self: center;
+}
+
+#copyright {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 30px 30px;
+  text-align: center;
+}
+
+#credits-name > a,
+#credits-unsplash > a {
+  text-decoration: none;
+  color: black;
+}
+
+#credits-unsplash {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#credits-name,
+#credits-logo {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+#credits-logo {
+  padding-top: 15px;
 }
